--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -13,8 +13,8 @@
 </head>
 <body class="bg-gray-50 font-sans">
 <div class="flex min-h-screen">
-    <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
-    <main class="flex-1 p-6 space-y-6">
+    <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
+    <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
         <h1 class="text-2xl font-semibold mb-4">Budgets</h1>
         <section>
             <form id="budget-form" class="md:flex md:space-x-4 space-y-4 md:space-y-0">
